- Added NgrokLog, an object representation of ngrok's logs that parses a line in to its component parts. - Began implementing a more robust NgrokProcess that manages the lifecycle of the ngrok binary and parses logs. - Added startupTimeout to JavaNgrokConfig. - Remove baseUrl from HttpClient implementation, just pass the full URL to request methods (since the baseUrl may change with the NgrokProcess).